@@ -9,6 +9,7 @@
 ==========6.4==========
 2025-
 1. 简化浮出窗口实现
+2. Panel.add_child添加索引参数
 
 ==========6.3==========
 2025-8-18
